[tool.poetry]
name = "cboe-extractor"
version = "0.1.0"
description = ""
authors = ["Ernesto Martinez del Pino <ernesto.martinez@syngenta.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-decouple = "^3.6"
requests = "^2.28.1"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^6.3.2"}
flake8 = "^4.0.1"
flake8-bugbear = "^22.3.23"
pytest = "^7.1.1"
pytest-html = "^3.1.1"
pytest-cov = ">=2.10.1,<3.0.0"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"